# gguf2mlx

./: README.md  pyproject.toml
src/gguf2mlx/: __init__.py  __main__.py  gguf2mlx.py
tests/: test_smoke.py
