[project]
name = "gguf2mlx"
version = "2.0.2"
description = "Convert GGUF models to MLX (Apple Silicon) safetensors format"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Barron Tang", email = "barrontom2011@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gguf>=0.18.0",
    "safetensors",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
mlx = ["mlx>=0.18.0"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.scripts]
gguf2mlx = "gguf2mlx:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
